--- a/package.json
+++ b/package.json
@@ -2,6 +2,20 @@
   "name": "project3",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+	"node": "6.9.4",
+	"npm": "3.10.10"
+  },
+  "repository": {
+	"type": "git",
+	"url": "git+https://github.com/nguyenmelissa23/hw_20_v1.git"
+  },
+  "author": "melissa",
+  "license": "ISC",
+  "bugs": {
+	"url": "https://github.com/nguyenmelissa23/hw_20_v1/issues"
+  },
+  "homepage": "https://github.com/nguyenmelissa23/hw_20_v1#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
@@ -22,7 +36,6 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "script": "webpack -w", 
-	"start": "react-scripts start"
+    "script": "webpack -w"
   }
 }
