--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "script": "webpack -w"
+	"start": "webpack -w"
   }
 }
